--- a/app/css/IntroSlider.module.css
+++ b/app/css/IntroSlider.module.css
@@ -76,6 +76,8 @@
   overflow: hidden;
   transition: all 0.4s ease-in-out;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  max-height: 400px;
+  /* max-height: auto; */
 }
 
 .mainImage {
@@ -100,10 +102,10 @@
 }
 .ImageWrapper {
   position: relative;
-  width: 100%;
-  max-width: 700px;
-  aspect-ratio: 16 / 9;
-  overflow: hidden;
+  /* width: 100%; */
+  /* max-width: 700px; */
+  /* aspect-ratio: 16 / 9; */
+  /* overflow: hidden; */
 }
 
 .thumb {
@@ -115,6 +117,7 @@
   transition: opacity 0.3s;
   cursor: pointer;
   background: none;
+  max-height: 70px;
 }
 
 .thumb:hover,
