--- a/app/css/PromotionCard.module.css
+++ b/app/css/PromotionCard.module.css
@@ -14,11 +14,77 @@
   overflow: hidden;
 }
 
+/* LoginModal.module.css */
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  animation: fadeIn 0.3s ease-in-out;
+}
+
+.modal {
+  background-color: #fff;
+  padding: 24px;
+  border-radius: 8px;
+  width: 320px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  animation: slideUp 0.3s ease-in-out;
+}
+
+.button {
+  background-color: #0070f3;
+  color: white;
+  padding: 8px 16px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.button:hover {
+  background-color: #0059c1;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 .card:hover {
   transform: translateY(-6px);
   box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
 }
-
+.wishlist {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  position: absolute;
+  top: 12px; /* Đặt cách trên cùng một chút */
+  right: 12px; /* Đặt cách phải một chút */
+  transition: color 0.3s ease;
+  z-index: 10; /* Đảm bảo icon nằm trên hình ảnh */
+}
 .discount {
   position: absolute;
   top: 12px;
@@ -39,7 +105,16 @@
   margin-bottom: 12px;
   transition: transform 0.3s ease;
 }
+.wishlist:hover {
+  color: #e91e63; /* Màu khi hover */
+}
+.wishlist svg {
+  transition: transform 0.3s ease;
+}
 
+.wishlist:hover svg {
+  transform: scale(1.1); /* Tăng kích thước khi hover */
+}
 .card:hover .image {
   transform: scale(1.05);
 }
