--- a/app/thank-you/thankYou.module.css
+++ b/app/thank-you/thankYou.module.css
@@ -1,8 +1,9 @@
 /* app/thank-you/thankYou.module.css */
 .container {
-  padding-top: 50px;
+  /* margin-top: 160px; */
+  /* padding-top: 90px; */
   max-width: 600px;
-  margin: 100px auto;
+  margin: 180px auto;
   padding: 40px;
   text-align: center;
   border-radius: 12px;
@@ -28,6 +29,7 @@
 }
 
 .homeBtn {
+  margin:30px;
   display: inline-block;
   padding: 12px 24px;
   background-color: #f55fa3;
