--- a/app/blog/[slug]/BlogDetail.module.css
+++ b/app/blog/[slug]/BlogDetail.module.css
@@ -73,5 +73,10 @@
 
 .relatedGrid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  /* width: 100%; */
+  gap: 20px;
+  justify-content: center;
+  align-items: stretch;
+  padding: 10px;
 }
