--- a/app/css/Footer.module.css
+++ b/app/css/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #f9e1e1;
+  background-color: #fe68a7;
   padding: 40px;
   font-family: Arial, sans-serif;
   color: #333;
@@ -18,6 +18,8 @@
   flex: 1;
   font-size: 16px;
   margin-right: 20px;
+  color: whitesmoke;
+  font-weight: bolder ;
 }
 
 .logo {
@@ -40,28 +42,32 @@
 
 .heading {
   font-size: 18px;
-  color: #ff7f7f;
+  color: rgb(223, 223, 223);
   margin-bottom: 15px;
 }
 
-.heading .ul{
-    list-style: none;
+.heading .ul {
+  list-style: none;
   text-decoration: none;
 }
-.ul {
+.uli {
   padding: 0;
+  text-decoration: none;
+  list-style-type: none;
 }
 
-.ul .li {
+.uli .li {
   margin: 10px 0;
   font-size: 14px;
-
+  text-decoration: none;
+  list-style-type: none;
+  color: aliceblue;
 }
 
 .footerBottom {
   text-align: center;
   font-size: 14px;
-  color: #777;
+  color: white;
   margin-top: 20px;
 }
 
@@ -101,8 +107,13 @@
 }
 
 @media (max-width: 480px) {
+  /* .footer{
+    margin-right: 100px;
+  } */
   .contact {
     padding: 20px;
+    margin:  0 auto;
+    /* margin-right: 190px; */
   }
 
   .logo {
