--- a/app/css/IntroSlider.module.css
+++ b/app/css/IntroSlider.module.css
@@ -13,7 +13,6 @@
   position: relative;
 }
 
-
 .left {
   flex: 1;
   min-width: 300px;
@@ -44,8 +43,7 @@
   margin-bottom: 24px;
   color: #2f2f2f;
   /* font-weight: 500; */
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .button {
@@ -60,7 +58,7 @@
 }
 
 .button:hover {
-    background: linear-gradient(to right, #a786df, #e96cb7);
+  background: linear-gradient(to right, #a786df, #e96cb7);
 
   /* background: linear-gradient(to right, #1CA308, #244E1E); */
 }
@@ -87,7 +85,6 @@
   border-radius: 12px;
   opacity: 0;
   animation: fadeIn 0.6s ease forwards;
-
 }
 
 .thumbnailRow {
@@ -161,7 +158,7 @@
   }
 
   .mainImage {
-        width: 100%;
+    width: 100%;
 
     height: 300px;
   }
@@ -234,7 +231,9 @@
   .left h2 {
     font-size: 1rem;
   }
-
+  .mainImage{
+    object-fit: unset;
+  }
   .left p {
     font-size: 0.85rem;
   }
@@ -243,11 +242,14 @@
     padding: 6px 16px;
     font-size: 0.85rem;
   }
-
+  .thumb {
+    height: 50px;
+  }
   .thumb img {
     width: 70px !important;
     height: 50px !important;
   }
+
 }
 /* iPhone SE (≤360px) */
 @media (max-width: 360px) {
@@ -274,7 +276,7 @@
   }
 
   .mainImage {
-        width: 100%;
+    width: 100%;
 
     height: auto;
   }
@@ -341,7 +343,7 @@
   }
 
   .mainImage {
-        width: 100%;
+    width: 100%;
 
     height: 400px;
   }
