--- a/app/css/ProductCard.module.css
+++ b/app/css/ProductCard.module.css
@@ -3,15 +3,15 @@
   border-radius: 16px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.08);
   padding: 16px;
-  width: 260px;
-  display: flex;
+  max-width: 100%;  display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   margin: 16px;
   position: relative; /* Giữ vị trí tuyệt đối cho các phần tử bên trong */
-  transition: transform 0.25s ease, box-shadow 0.25s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
   overflow: hidden;
+    flex: 1 1 260px;
 }
 /* Thêm icon wishlist */
 .wishlist {
@@ -58,14 +58,15 @@
 
 .image {
   width: 100%;
-  height: 180px;
-  object-fit: contain;
+  height: 160px;
+  border-radius: 20px;
+  /* object-fit: contain; */
   margin-bottom: 12px;
   transition: transform 0.3s ease;
 }
 
 .card:hover .image {
-  transform: scale(1.05);
+  transform: scale(1.05); /* Add sliding for the image */
 }
 
 .brand,
