--- a/app/css/PromotionList.module.css
+++ b/app/css/PromotionList.module.css
@@ -19,7 +19,29 @@
   text-align: center;
   margin-bottom: 16px;
 }
+.sliderContainer{
+  overflow:hidden;
+  position:relative;
+  width: 100%;
+}
+.noPromo {
+  font-size: 25px;
+  color: red;
+  text-align: center;
+  margin-top: 20px;
+  /* align-content: center; */
+  line-height: 100px;
+}
 
+.sliderTrack {
+  display: flex;
+}
+
+.slide {
+  flex: 0 0 25%; /* 4 items per page = 100% / 4 */
+  box-sizing: border-box;
+  padding: 0 10px;
+}
 .grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
