--- a/app/products/products.module.css
+++ b/app/products/products.module.css
@@ -1,9 +1,3 @@
-/* ===== CƠ BẢN ===== */
-.body {
-  margin: 0;
-  font-family: "Inter", sans-serif;
-  background-color: white;
-}
 
 .top-banner {
   background-color: #f55fa3;
@@ -170,14 +164,12 @@
 
 /* ===== SẢN PHẨM & BỘ LỌC ===== */
 .product-page {
-  /* padding-right:130px; */
   display: flex;
   max-width: 1200px;
-  margin: 180px 10px;
-  /* padding-top: 140px; */
-  /* gap: 40px; */
+  margin: 180px auto;   /* ✅ Căn giữa không bị tràn */
+ /* padding: 0 10px;      */
+  box-sizing: border-box;
 }
-
 .filter-sidebar {
   width: 280px;
   padding: 20px;
@@ -287,7 +279,7 @@
 
 .product-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   gap: 10px;
 }
 
