--- a/app/css/PromotionList.module.css
+++ b/app/css/PromotionList.module.css
@@ -79,6 +79,7 @@
   background-color: rgba(0, 0, 0, 0.1);
   padding: 6px 12px;
   border-radius: 8px;
+  text-align: center;
 }
 
 /* Responsive Design */
