--- a/app/products/products.module.css
+++ b/app/products/products.module.css
@@ -593,6 +593,10 @@
   }
 }
 @media (max-width: 480px) {
+  .product-page{
+        margin-top: 120px;
+
+  }
   .product-grid {
     grid-template-columns: repeat(2, 1fr);
   }
