--- a/app/css/IntroSlider.module.css
+++ b/app/css/IntroSlider.module.css
@@ -232,7 +232,14 @@
     font-size: 1rem;
   }
   .mainImage{
-    object-fit: unset;
+    /* border-radius: 50px; */
+    object-fit: fill;
+    /* width: 50%; */
+    /* width: 50%; */
+  }
+  .imageWrapper{
+    /* border-radius: 40%; */
+    /* width: 100%; */
   }
   .left p {
     font-size: 0.85rem;
