--- a/app/cart/Cart.module.css
+++ b/app/cart/Cart.module.css
@@ -125,6 +125,38 @@
   transition: background 0.3s ease;
   box-shadow: 0 4px 12px rgba(240, 98, 146, 0.4);
 }
+.backBtn {
+  position: absolute;
+  top: 10px;
+  left: 25px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color: #333;
+  display: none; /* mặc định ẩn trên PC */
+  z-index: 997;
+}
+
+.backBtnPC {
+  position: absolute;
+  top: 165px;
+  left: 42px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color: #333;
+  z-index: 997;
+  transition: 0.3s ease-in;
+  height: auto;
+}
+
+.backBtnPC:hover {
+  background-color: #1e40af; /* xanh đậm */
+  color: #fff;
+  border-radius: 100%;
+  height: 25px;
+  transition: 0.3s ease;
+}
 
 .checkout:hover {
   background: linear-gradient(to right, #ec407a, #d81b60);
@@ -153,3 +185,5 @@
     width: 100%;
   }
 }
+
+
