--- a/app/checkout/checkout.module.css
+++ b/app/checkout/checkout.module.css
@@ -1,6 +1,6 @@
 /* Reset và cấu trúc cơ bản */
 .checkoutContainer {
-  margin: 180px auto;
+  margin: 200px auto;
   /* padding-top: 300px; */
   max-width: 1200px;
   font-family: "Inter", sans-serif;
@@ -13,6 +13,38 @@
   display: flex;
   gap: 2rem;
   flex-wrap: wrap;
+}
+.backBtn {
+  position: absolute;
+  top: 165px;
+  left: 25px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color: #333;
+  display: none; /* mặc định ẩn trên PC */
+  z-index: 997;
+}
+
+.backBtnPC {
+  position: absolute;
+  top: 165px;
+  left: 175px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color: #333;
+  z-index: 997;
+  transition: 0.3s ease-in;
+  height: auto;
+}
+
+.backBtnPC:hover {
+  background-color: #1e40af; /* xanh đậm */
+  color: #fff;
+  border-radius: 100%;
+  height: 25px;
+  transition: 0.3s ease;
 }
 
 .left {
@@ -241,6 +273,12 @@
 @media (max-width: 768px) {
   .grid {
     flex-direction: column;
+  }
+  .backBtnPC{
+    display: none;
+  }
+  .backBtn{
+    display: block;
   }
 
   .right {
