--- a/app/css/HeaderSearch.module.css
+++ b/app/css/HeaderSearch.module.css
@@ -86,9 +86,7 @@
 }
 
 .logo {
-  font-size: 30px;
-  font-weight: bold;
-  color: #000;
+  width: 45%;
 }
 
 .searchBox {
@@ -363,8 +361,8 @@
 }
 @media (max-width: 1024px) {
   .logo {
-    font-size: 24px;
-    margin-left: 0;
+    width: 35%;
+    margin: 0 auto;
   }
 
   .searchBox input {
@@ -471,11 +469,7 @@
     z-index: 10001;
   }
 
-  .logo {
-    font-size: 22px;
-    margin: 0 auto;
-    display: block;
-  }
+
 
   .searchBox,
   .iconList,
@@ -518,9 +512,12 @@
 }
 
 @media (max-width: 480px) {
-  .logo {
-    font-size: 20px;
+ .logo {
+    width: 35%;
+    /* margin: 0 auto; */
+    margin-left: 30%;
   }
+
 
   .searchBox input {
     font-size: 12px;
